--- a/login.html
+++ b/login.html
@@ -1,47 +1,51 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge" /> -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WebCode</title>
-    <link rel="stylesheet" href="login.css" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="login.css">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;600;700&display=swap" rel="stylesheet">
+    <title>Document</title>
 </head>
 
 <body>
-    <div class="bg-img">
-    </div>
-    <div class="box">
+    <header>
+        <nav class="font-bold flex justify-between items-center px-28 p-7 shadow-xl">
+            <div class="logo">
 
-        <span class="borderline"></span>
-        <form>
-            <h2>Sign in</h2>
-            <div class="inputbox">
-                <input type="text" required="required" id="eemail" />
-                <span>UserEmail</span>
-                <i></i>
+                <img src="./img/blogo.png" class="w-24" alt="" onclick="window.open('index.html', '_blank');">
             </div>
-            <div class="inputbox">
-                <input type="password" required="required" id="lpassword" />
-                <span>Password</span>
-                <i></i>
+            <ul class="flex gap-4" href="index.html">
+
+                <a class="hover:text-blue-600 hover:underline hover:decoration-2 hover:cursor-pointer hover:underline-offset-4" href="index.html">Home</a>
+
+            </ul>
+        </nav>
+
+        <section class="flex h-full p-10 items-center w-full justify-center">
+            <div class="login w-96 rounded">
+                <div class="bg-gray-200 flex-col  h-96 shadow-xl rounded-xl flex items-center justify-center">
+                    <!-- <form class="flex  flex-col font-bold" action=""> -->
+                    <div class="flex  flex-col font-bold p-5 gap-2">
+                        <label for="">Email</label>
+                        <input type="email" id="email" placeholder="Username/email" class="border w-full p-1 border-blue-600 border-3 rounded">
+                    </div>
+                    <div class="flex  flex-col font-bold p-5 gap-2">
+                        <label for="">Password</label>
+                        <input type="password" id="pass" placeholder="Password" class="border w-full p-1 border-blue-600 border-3 rounded">
+                    </div>
+                    <div class="flex items-center justify-center">
+                        <button class=" btn-login w-24 bg-blue-600 text-white rounded p-2" onclick="validate()">Submit</button>
+                    </div>
+                    <!-- </form> -->
+                </div>
             </div>
-            <div class="links">
-                <p>Don't have an Account?</p>
-                <a href="./signup.html">Signup</a>
-            </div>
-            <div class="links">
-                <a href="#">Forget Password?</a>
-            </div>
-            <a href="home.html">
-                <button class="logbtn">
-                    Login
-                </button>
-            </a>
-        </form>
-    </div>
-    <script src="login.js"></script>
+        </section>
+        <script src="login.js"></script>
+    </header>
 </body>
 
 </html>
