--- a/login.html
+++ b/login.html
@@ -13,17 +13,18 @@
 
 <body>
     <header>
-        <nav class="font-bold flex justify-between items-center px-28 p-7 shadow-xl">
+        <nav class="font-bold flex justify-between items-center px-28 p-7 shadow-2xl">
             <div class="logo">
 
-                <img src="./img/blogo.png" class="w-24" alt="" onclick="window.open('index.html', '_blank');">
+                <img src="logo.png" class="w-24" alt=""  onclick="window.open('Home.html', '_blank');">
             </div>
-            <ul class="flex gap-4" href="index.html">
+            <ul class="flex gap-4" href="home.html">
 
-                <a class="hover:text-blue-600 hover:underline hover:decoration-2 hover:cursor-pointer hover:underline-offset-4" href="index.html">Home</a>
+                <a class="hover:text-blue-600 hover:underline hover:decoration-2 hover:cursor-pointer hover:underline-offset-4 text-white text-2xl" href="home.html">Home</a>
 
             </ul>
         </nav>
+    </header>
 
         <section class="flex h-full p-10 items-center w-full justify-center">
             <div class="login w-96 rounded">
@@ -45,7 +46,7 @@
             </div>
         </section>
         <script src="login.js"></script>
-    </header>
+    
 </body>
 
 </html>
