--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
 
 </head>
 
-<body  class="h-screen bg-gradient-to-b from-green-400 to-green-200"> 
+<body  class="bg-gradient-to-br from-gray-400 via-gray-600 to-blue-800"> 
   
   
     <header>
