Co-authored-by: Ratikashre S S <RATIKASHRE@users.noreply.github.com>

--- a/buy.html
+++ b/buy.html
@@ -17,16 +17,22 @@
 </head>
 
 <body>
+   
+  
     <header>
-        <nav class="relative w-full font-bold flex justify-between items-center px-28 p-7 shadow-xl">
+        <nav class=" w-full font-bold flex justify-between items-center px-20 p-2 shadow-xl">
             <div class="logo">
-                <img src="Logo.png" class="w-24" alt="">
+                <img src="./img/logo2.png" class="w-24" alt="">
             </div>
             <ul class="flex gap-7">
-                <li class="hover:text-blue-600 hover:underline hover:decoration-2 hover:cursor-pointer hover:underline-offset-4">Home</li>
-                <li class="hover:text-blue-600 hover:underline hover:decoration-2 hover:cursor-pointer hover:underline-offset-4">Products</li>
-                <li class="hover:text-blue-600 hover:underline hover:decoration-2 hover:cursor-pointer hover:underline-offset-4">Cart</li>
-                <li class="hover:text-blue-600 hover:underline hover:decoration-2 hover:cursor-pointer hover:underline-offset-4">Payment</li>
+                <li class="hover:text-blue-600 hover:underline hover:decoration-2 hover:cursor-pointer hover:underline-offset-4">
+                    Wishlist</li>
+                <li class="hover:text-blue-600 hover:underline hover:decoration-2 hover:cursor-pointer hover:underline-offset-4">
+                    Cart</li>
+                <li class="hover:text-blue-600 hover:underline hover:decoration-2 hover:cursor-pointer hover:underline-offset-4">
+                   My Account</li>
+                <li class="hover:text-blue-600 hover:underline hover:decoration-2 hover:cursor-pointer hover:underline-offset-4">
+                    About us</li>
             </ul>
         </nav>
     </header>
