--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
         <nav class="font-bold flex justify-between items-center px-28 p-7 shadow-2xl">
             <div class="logo">
 
-                <img src="logo.png" class="w-24" alt=""  onclick="window.open('Home.html', '_blank');">
+                <img src="logo.png" class="w-24" alt=""  onclick="window.open('Home.html');">
             </div>
             <ul class="flex gap-4" href="home.html">
 
