--- a/product1.html
+++ b/product1.html
@@ -24,7 +24,8 @@
         <nav class=" w-full font-bold flex justify-between items-center px-20 p-2 shadow-xl">
             <div class="logo">
              
-                    <a href="home.html"></a> <img src="./img/logo2.png "  class="w-24"  alt="">
+                    <a href="home.html"> <img src="./img/logo2.png "  class="w-24"  alt="">
+                    </a>
            
             </div>
             <ul class="flex gap-7">
