--- a/cart.html
+++ b/cart.html
@@ -10,32 +10,35 @@
   </head>
   <body>
     <header>
-      <nav class=" w-full font-bold flex justify-between items-center px-20 p-2 shadow-xl">
-          <div class="logo">
-           
-                  <a href="home.html"> <img src="./img/logo2.png "  class="w-24"  alt="">
-                  </a>
-         
-          </div>
-          <ul class="flex gap-7">
-              <li class="hover:text-blue-600 hover:underline hover:decoration-2 hover:cursor-pointer hover:underline-offset-4">
-                  Wishlist</li>
-              <li class="hover:text-blue-600 hover:underline hover:decoration-2 hover:cursor-pointer hover:underline-offset-4">
-                  Cart</li>
-              <li class="hover:text-blue-600 hover:underline hover:decoration-2 hover:cursor-pointer hover:underline-offset-4">
-                 My Account</li>
-              <li class="hover:text-blue-600 hover:underline hover:decoration-2 hover:cursor-pointer hover:underline-offset-4">
-                  About us</li>
-          </ul>
-      </nav>
-  </header>
+        <nav class="navi1">
+            <div class="logo">
+                <a href="home.html">
+                <img src="./img/logo2.png" class="w-24" alt="" height="60px">
+            </a>
+            </div>
+            <ul class="flex gap-7">
+                <li class="hover:text-blue-600 hover:underline hover:decoration-2 hover:cursor-pointer hover:underline-offset-4">
+                    Wishlist
+                </li>
+                <a href="./cart.html">
+                    <li class="hover:text-blue-600 hover:underline hover:decoration-2 hover:cursor-pointer hover:underline-offset-4">
+                        Cart
+                    </li>
+                </a>
+                <li class="hover:text-blue-600 hover:underline hover:decoration-2 hover:cursor-pointer hover:underline-offset-4">
+                    My Account</li>
+                <li class="hover:text-blue-600 hover:underline hover:decoration-2 hover:cursor-pointer hover:underline-offset-4">
+                    About us</li>
+            </ul>
+        </nav>
+    </header>
 
     <div class="container">
       <section id="cart">
         <article class="product">
           <header>
             <a class="remove">
-              <img src="b2.jpeg" alt="" />
+              <img src="./img/b2.jpeg" alt="" />
 
               <h3>Remove product</h3>
             </a>
@@ -64,7 +67,7 @@
         <div class="product">
           <header>
             <a class="remove">
-              <img src="b3.jpg" alt="" />
+              <img src="./img/b3.jpg" alt="" />
 
               <h3>Remove product</h3>
             </a>
@@ -94,7 +97,7 @@
         <article class="product">
           <header>
             <a class="remove">
-              <img src="b1.jpg" alt="" />
+              <img src="./img/b1.jpg" alt="" />
 
               <h3>Remove product</h3>
             </a>
