--- a/buy.html
+++ b/buy.html
@@ -22,13 +22,17 @@
     <header>
         <nav class=" w-full font-bold flex justify-between items-center px-20 p-2 shadow-xl">
             <div class="logo">
+                <a href="home.html">
                 <img src="./img/logo2.png" class="w-24" alt="">
+            </a>
             </div>
             <ul class="flex gap-7">
                 <li class="hover:text-blue-600 hover:underline hover:decoration-2 hover:cursor-pointer hover:underline-offset-4">
                     Wishlist</li>
+                    <a href="cart.html">
                 <li class="hover:text-blue-600 hover:underline hover:decoration-2 hover:cursor-pointer hover:underline-offset-4">
                     Cart</li>
+                </a>
                 <li class="hover:text-blue-600 hover:underline hover:decoration-2 hover:cursor-pointer hover:underline-offset-4">
                    My Account</li>
                 <li class="hover:text-blue-600 hover:underline hover:decoration-2 hover:cursor-pointer hover:underline-offset-4">
