--- a/home.html
+++ b/home.html
@@ -424,6 +424,11 @@
 
 
     </section>
+    <section class="footer">
+        <span>Created By Indomitable| &#169 2023 All rights reserved.</span>
+    </section>
+
+    
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.4/flowbite.min.js"></script>
     <script src="index.html"></script>
