--- a/cart.html
+++ b/cart.html
@@ -13,10 +13,10 @@
         <nav class="navi1">
             <div class="logo">
                 <a href="home.html">
-                <img src="./img/logo2.png" class="w-24" alt="" height="60px">
+                <img src="./img/logo2.png" class="w-24" alt="" height="100px">
             </a>
             </div>
-            <ul class="flex gap-7">
+            <ul class="inline-flex gap-7">
                 <li class="hover:text-blue-600 hover:underline hover:decoration-2 hover:cursor-pointer hover:underline-offset-4">
                     Wishlist
                 </li>
@@ -134,7 +134,7 @@
 
         <div class="right">
           <h1 class="total">Total: <span>177.16</span>€</h1>
-          <a class="btn">Checkout</a>
+          <a class="btn" href="./buy.html">Checkout</a>
         </div>
       </div>
     </footer>
